ingress/jellyfin/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeflix
spec:
  externalName: 192.168.1.218
  ports:
  - port: 8096
    protocol: TCP
    targetPort: 8096
  sessionAffinity: None
  type: ExternalName
