ingress/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: homeflix
spec:
  ingressClassName: nginx
  rules:
  - host: homeflix.theramirez.casa
    http:
      paths:
      - backend:
          service:
            name: homeflix
            port:
              number: 8096
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - homeflix.theramirez.casa
    secretName: homeflix-casa-tls
